org.mmisw.orrportal: MMI ORR Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2012-08-18  2.0.28.beta
	- SearchGroup: All subjects in an ontology are now included for mapping purposes.
	  This was mainly done to enable possible mappings using the BODC vocabularies.

2012-08-18  2.0.27.beta
	- sync with orrclient module

2012-06-20  2.0.26.beta
	- Sort term table by the ID (localName) of the terms (#290). See OrrClient module.

2012-04-17  2.0.25.beta
	- GWT 2.4.0 tests, see gwt2/gwt2.txt

2012-04-03  2.0.24.beta
	- version sync with the other modules.

2012-04-02  2.0.23.beta
	- version sync with the other modules.

2012-03-22  2.0.22.beta
	- More adjustments related with use of new AllegroGraph 4.4
	- EntityPanel: Added some padding for easier legibility (OntologyTable-row style)

2012-03-27  2.0.21.beta
	- Adjustments to align with changes in the Ont and Orr client libraries, which are
	  in part due to enabling the use of AllegroGraph 4.4 and others while
	  doing migration of the main ORR deployment to a new hosting.
	- Syncing on the 2.0.21.beta version.

2011-03-24  2.0.16.beta
	- bug fix in orrclient module: possible NPE in OntTypeUtil.determineType().
	  Exposed while trying to upload new version of CF vocab released today.
	- build.xml: explicitly compiling with source="1.5" target="1.5" as I recently updated by
	  local development environment (so, by default I would be compile for 1.6).

2010-11-16 
	Giving GWT 2.x another try. Now, with the latest as of today, which is 2.1.
	
	OrrService: Removed unnecessary import org.mmisw.orrportal.gwt.server.UploadServlet, 
	which was added by Eclipe because of a reference in a javadoc comment, but not actually 
	used in the code.  This made the GWT compiler (2.1) generate an error because this 
	server-side element is not part of the 'shared' interface (and that's correct). 
	Interestingly, GWT 1.5.2 works fine here, and it should be so as the element is NOT 