@@ -5,6 +5,7 @@ $Id$
 2012-08-18  2.0.28.beta
 	- SearchGroup: All subjects in an ontology are now included for mapping purposes.
 	  This was mainly done to enable possible mappings using the BODC vocabularies.
+	  Duplicates within the same ontology are avoided using a Set<EntityInfo>. 
 
 2012-08-18  2.0.27.beta
 	- sync with orrclient module
